# froglang

./: CMakeLists.txt  Dockerfile  README.md
doc/: SYNTAX.md
docker/alpine/: Dockerfile
docker/ubuntu/: Dockerfile
include/: ast.hpp  compiler.hpp  froglexer.hpp  tokens.hpp
include/ast/: binary_operators.hpp  expression_nodes.hpp  globals.hpp  globject_nodes.hpp  node.hpp  statement_nodes.hpp  unary_operators.hpp
include/ast/visitors/: tree_compiler.hpp  tree_printer.hpp  tree_visitor.hpp
include/dsa/: named_values.hpp  type_holder.hpp  value_holder.hpp  variable_holder.hpp
include/libgen/: print.hpp
include/types/: type.h  type.hpp  var_type.hpp
src/: CMakeLists.txt  compiler.cpp  compiler_driver.cpp  lexer.l  main.cpp  parser.y  tokens.cpp
src/ast/: binary_operators.cpp  expression_nodes.cpp  globals.cpp  globject_nodes.cpp  node.cpp  statement_nodes.cpp  unary_operators.cpp
src/ast/visitors/: tree_compiler.cpp  tree_printer.cpp  tree_visitor.cpp
src/dsa/: named_values.cpp  type_holder.cpp  value_holder.cpp  variable_holder.cpp
src/lexer/: lexer.l
src/libgen/: print.cpp
src/parser/: parser.y
src/tokens/: tokens.cpp
src/types/: type.cpp
tests/: CMakeLists.txt  run_crash_test.sh  run_output_test.sh
tests/crash_tests/: block_inside_block.in  declaration_assignment.in  declaration_in_main  declaration_in_main.in  division.in  empty_declaration.in  empty_main_return0  empty_main_return0.in  function_call  function_call.in
tests/operator_tests/in/: integer_addition.in  integer_division.in  integer_multiplication.in  integer_subtraction.in  integer_unary_minus.in  negation.in
tests/print_tests/in/: constant_print.in  iverson_fibonacci.in  modulo_10.in  primes_from_2_to_100.in  recursive_factorial_10.in  recursive_factorial_10_inequality.in  variable_print.in  variable_shadowing.in
